# cloudmesh-ai-monitor

./: .gitignore  CHANGELOG.md  Makefile  README.md  VERSION  a.py  cmd.py  mkdocs.yml  pyproject.toml  requirements.txt  todo.txt
docs/: api.md
src/cloudmesh/ai/app/: monitor.yaml
src/cloudmesh/ai/command/: monitor.py  monitor_plugin.py  monitor_table_config.js  monitor_table_styles.css
src/cloudmesh/ai/monitor/: core.py  llm_checker.py  probe.py  renderer.py
src/cloudmesh/ai/monitor/command/: cli.py
src/cloudmesh/ai/monitor/deprecated/: core.py
src/cloudmesh/ai/monitor/flutter/: __init__.py
src/cloudmesh/ai/monitor/gui/: main.py
src/cloudmesh/ai/monitor/gui/static/: index.html
src/cloudmesh/ai/monitor/terminalgui/: app.py  core.py
tests/: test_core.py  test_plugin.py  test_renderer.py  test_spark_smi.py
tests/integration/: test_dgx_host.py  test_mac_host.py  test_spark_host.py
