[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cloudmesh-ai-monitor"
dynamic = ["version"]
description = "Observability extension for cloudmesh-ai services"
dependencies = [
    "requests",
    "rich",
    "pyyaml",
    "textual",
    "fastapi",
    "uvicorn",
    "cloudmesh-ai-common",
    "cloudmesh-ai-cmc",
    "pytest",
    "pytest-asyncio"
]

[project.entry-points."cloudmesh.ai.command"]
monitor = "command.monitor:register"

[tool.setuptools.dynamic]
version = {file = "VERSION"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["command*"]
