[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cloudmesh-ai-monitor"
dynamic = ["version"]
description = "Observability extension for cloudmesh-ai services"
readme = "README.md"
license = "Apache-2.0"
urls = { "Homepage" = "https://github.com/cloudmesh-ai/cloudmesh-ai-monitor" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: System Administrators",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "requests",
    "rich",
    "pyyaml",
    "textual",
    "fastapi",
    "uvicorn",
    "cloudmesh-ai-common",
    "cloudmesh-ai-cmc",
    "pytest",
    "pytest-asyncio"
]

[project.entry-points."cloudmesh.ai.command"]
monitor = "command.monitor:register"

[project.entry-points."cloudmesh.ai.plugin"]
monitor = "cloudmesh.ai.command.monitor_plugin:MonitorPlugin"

[tool.setuptools.dynamic]
version = {file = "VERSION"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["command*"]
